custom training, python -> tf functions and graph

--- a/skt-custom-models-tensorflow.ipynb
+++ b/skt-custom-models-tensorflow.ipynb
@@ -1091,9 +1091,658 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6ac7e582-a48d-449b-97f2-9abc2ef48126",
+   "metadata": {},
+   "source": [
+    "### AutoDiff"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "6ccbf8e5-12aa-4d92-b3f4-3d6a9e2986f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(w1, w2):\n",
+    "    return 3 * w1 ** 2 + 2 * w1 * w2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "72423437-062f-47dc-bd31-085cf7867423",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.000003007075065"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w1, w2 = 5, 3\n",
+    "eps = 1e-6\n",
+    "(f(w1 + eps, w2) - f(w1, w2)) / eps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "8dc9f4a2-0763-49a3-b2ff-23ddd8caeeef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10.000000003174137"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(f(w1, w2 + eps) - f(w1, w2)) / eps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77488a4e-05d5-46a6-80a8-79d54389a51b",
+   "metadata": {},
+   "source": [
+    "### Reverse-mode autodiff (backprop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "cb4b7015-1544-4ce2-99c0-00f51aed2133",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w1, w2 = tf.Variable(5.), tf.Variable(3.)\n",
+    "with tf.GradientTape() as tape:\n",
+    "    z = f(w1, w2)\n",
+    "\n",
+    "gradients = tape.gradient(z, [w1, w2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "c1a5a5fc-16f6-49f9-a7b7-23b8eac0c230",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=float32, numpy=36.0>,\n",
+       " <tf.Tensor: shape=(), dtype=float32, numpy=10.0>]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gradients"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "fe727324-db61-4b6a-9fe2-fe57af2f59d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tf.Tensor(36.0, shape=(), dtype=float32) tf.Tensor(10.0, shape=(), dtype=float32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# if we need to call gradient() more than once:\n",
+    "with tf.GradientTape(persistent=True) as tape:\n",
+    "    z = f(w1, w2)\n",
+    "\n",
+    "dz_dw1 = tape.gradient(z, w1)\n",
+    "dz_dw2 = tape.gradient(z, w2)\n",
+    "print(dz_dw1, dz_dw2)\n",
+    "del tape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e769a882-c355-4e36-a137-0917f1aa2733",
+   "metadata": {},
+   "source": [
+    "To record every operation from a tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "49b4b3a8-2822-4687-b666-b54ab96f6572",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=float32, numpy=36.0>,\n",
+       " <tf.Tensor: shape=(), dtype=float32, numpy=10.0>]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "with tf.GradientTape() as tape:\n",
+    "    tape.watch(w1)\n",
+    "    tape.watch(w2)\n",
+    "    z = f(w1, w2)\n",
+    "\n",
+    "gradients = tape.gradient(z, [w1, w2])\n",
+    "gradients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba0c2af8-a44c-4e97-b54a-d8cf0f0addf7",
+   "metadata": {},
+   "source": [
+    "^ sometimes we need to watch because loss may be based on the gradient of activations with respect to input\n",
+    "\n",
+    "gradient tape is used to compute the gradients of a single value (usually the loss) with regard to a set of values (usually the model parameters).\n",
+    "\n",
+    "reverse-mode autodiff needs to do one forward pass and one reverse pass to get all the gradients at once. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e69326ce-01b2-4e4b-9365-cb25a9075474",
+   "metadata": {},
+   "source": [
+    "Jacobian for individual gradients with their losses\n",
+    "\n",
+    "Hessians for second-order partial derivatives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2d03d15-b6dd-435f-b226-898829134eb7",
+   "metadata": {},
+   "source": [
+    "stopping backprop:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "eb2265b9-e1da-4bb0-b8da-4c2832cc554c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=float32, numpy=30.0>, None]"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def f(w1, w2):\n",
+    "    return 3 * w1 ** 2 + tf.stop_gradient(2 * w1 * w2)\n",
+    "\n",
+    "with tf.GradientTape() as tape:\n",
+    "    z = f(w1, w2)\n",
+    "\n",
+    "gradients = tape.gradient(z, [w1, w2])\n",
+    "gradients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b85ef0e-b986-401b-b960-b71aa78a449d",
+   "metadata": {},
+   "source": [
+    "computing a gradient might be infinite\n",
+    "\n",
+    "add a tiny value to x such as 1/1_000_000 or 10^-6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "11f10c61-b614-4eba-b26f-614febfd3373",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(), dtype=float32, numpy=inf>]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = tf.Variable(1e-50)\n",
+    "with tf.GradientTape() as tape:\n",
+    "    z = tf.sqrt(x)\n",
+    "\n",
+    "tape.gradient(z, [x])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "c9384a83-bff0-4f32-b68c-df08cbda1002",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# stable gradients\n",
+    "@tf.custom_gradient\n",
+    "def my_softplus(z):\n",
+    "    def my_softplus_gradients(grads):\n",
+    "        return grads * (1 - 1 / (1 + tf.exp(z)))\n",
+    "\n",
+    "    result = tf.math.log(1 + tf.exp(-tf.abs(z))) + tf.maximum(0., z)\n",
+    "    return result, my_softplus_gradients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa67cce4-ba2e-4e92-b38c-4a79fd258a0b",
+   "metadata": {},
+   "source": [
+    "derivative of `log(1 + exp(z)) = exp(z) / (1 + exp(z))` not stable for large z\n",
+    "\n",
+    "with a bit of algebraic manipulation, it’s also equal to `1 – 1 / (1 + exp(z))`, which is stable."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19eee5f9-ca9d-4f7e-a1ad-5c7b7a5fe65a",
+   "metadata": {},
+   "source": [
+    "### Creating a custom Training loop\n",
+    "\n",
+    "most of the time you will just need `fit()`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "91aea49c-8c6e-43be-a9ca-ea8d51886ac1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l2_reg = tf.keras.regularizers.l2(0.05)\n",
+    "model = tf.keras.models.Sequential([\n",
+    "    tf.keras.layers.Dense(30, activation=\"relu\", kernel_initializer=\"he_normal\",\n",
+    "                          kernel_regularizer=l2_reg),\n",
+    "    tf.keras.layers.Dense(1, kernel_regularizer=l2_reg)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "fa7325ce-6f0e-4a4c-a353-bdf677bd3b6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_batch(X, y, batch_size=32):\n",
+    "    idx = np.random.randint(len(X), size=batch_size)\n",
+    "    return X[idx], y[idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "5b69752c-79ef-4515-8444-6aceb1c8a526",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def print_status_bar(step, total, loss, metrics=None):\n",
+    "    metrics = \" - \".join([f\"{m.name}: {m.result():.4f}\"\n",
+    "                          for m in [loss] + (metrics or [])])\n",
+    "    end = \"\" if step < total else \"\\n\"\n",
+    "    print(f\"\\r{step}/{total} - \" + metrics, end=end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "127fc8fe-a55c-417f-b0b4-3db54be4dcb8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = np.random.randn(320, 5).astype(np.float32)  # Input features\n",
+    "y_train = (2 * X_train[:, 0] + 3 * X_train[:, 1] + np.random.randn(320)).astype(np.float32)  # Target values\n",
+    "\n",
+    "n_epochs = 5\n",
+    "batch_size = 32\n",
+    "n_steps = len(X_train) // batch_size\n",
+    "optimizer = tf.keras.optimizers.SGD(learning_rate=0.01)\n",
+    "loss_fn = tf.keras.losses.MeanSquaredError()\n",
+    "mean_loss = tf.keras.metrics.Mean(name=\"mean_loss\")\n",
+    "metrics = [tf.keras.metrics.MeanAbsoluteError()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "faeb02e0-8abb-4610-87ab-7b7f9f5af9bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting scikit-learn\n",
+      "  Downloading scikit_learn-1.6.1-cp312-cp312-macosx_12_0_arm64.whl.metadata (31 kB)\n",
+      "Requirement already satisfied: numpy>=1.19.5 in /Users/mathias/.pyenv/versions/3.12.0/lib/python3.12/site-packages (from scikit-learn) (2.0.2)\n",
+      "Collecting scipy>=1.6.0 (from scikit-learn)\n",
+      "  Downloading scipy-1.15.1-cp312-cp312-macosx_14_0_arm64.whl.metadata (61 kB)\n",
+      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
+      "  Using cached joblib-1.4.2-py3-none-any.whl.metadata (5.4 kB)\n",
+      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
+      "  Using cached threadpoolctl-3.5.0-py3-none-any.whl.metadata (13 kB)\n",
+      "Downloading scikit_learn-1.6.1-cp312-cp312-macosx_12_0_arm64.whl (11.2 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.2/11.2 MB\u001b[0m \u001b[31m45.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hUsing cached joblib-1.4.2-py3-none-any.whl (301 kB)\n",
+      "Downloading scipy-1.15.1-cp312-cp312-macosx_14_0_arm64.whl (24.9 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m24.9/24.9 MB\u001b[0m \u001b[31m72.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:01\u001b[0m\n",
+      "\u001b[?25hUsing cached threadpoolctl-3.5.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: threadpoolctl, scipy, joblib, scikit-learn\n",
+      "Successfully installed joblib-1.4.2 scikit-learn-1.6.1 scipy-1.15.1 threadpoolctl-3.5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install scikit-learn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "805951b6-bad8-49d7-8091-b2eb390a68d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "10/10 - mean_loss: 9.0646 - mean_absolute_error: 2.0229\n",
+      "Epoch 2/5\n",
+      "10/10 - mean_loss: 5.5665 - mean_absolute_error: 1.3082\n",
+      "Epoch 3/5\n",
+      "10/10 - mean_loss: 4.7882 - mean_absolute_error: 1.1024\n",
+      "Epoch 4/5\n",
+      "10/10 - mean_loss: 4.0188 - mean_absolute_error: 0.8930\n",
+      "Epoch 5/5\n",
+      "10/10 - mean_loss: 4.1662 - mean_absolute_error: 0.9681\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)  # Standardize features\n",
+    "\n",
+    "# training loop!\n",
+    "for epoch in range(1, n_epochs + 1):\n",
+    "    print(\"Epoch {}/{}\".format(epoch, n_epochs))\n",
+    "    for step in range(1, n_steps + 1):\n",
+    "        X_batch, y_batch = random_batch(X_train_scaled, y_train)\n",
+    "        with tf.GradientTape() as tape:\n",
+    "            y_pred = model(X_batch, training=True)\n",
+    "            main_loss = tf.reduce_mean(loss_fn(y_batch, y_pred))\n",
+    "            loss = tf.add_n([main_loss] + model.losses)\n",
+    "\n",
+    "        gradients = tape.gradient(loss, model.trainable_variables)\n",
+    "        optimizer.apply_gradients(zip(gradients, model.trainable_variables))\n",
+    "        mean_loss(loss)\n",
+    "        for metric in metrics:\n",
+    "            metric(y_batch, y_pred)\n",
+    "\n",
+    "        print_status_bar(step, n_steps, mean_loss, metrics)\n",
+    "\n",
+    "    for metric in [mean_loss] + metrics:\n",
+    "        metric.reset_state()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be66fc58-cd4b-4730-b56a-3952dc200c22",
+   "metadata": {},
+   "source": [
+    "### Tensorflow functions and Graphs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "fd88360e-5f45-4076-8d4c-cdb86d7e47df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cube(x):\n",
+    "    return x ** 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "3fc8d5bf-f0f6-4046-814a-d98c63a35810",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cube(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "ec2ada42-ec68-40fe-9b32-ad3ec2d88e1f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=8.0>"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cube(tf.constant(2.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "id": "2e9ffa26-de8c-4360-aaf2-7b6d47f31992",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tensorflow.python.eager.polymorphic_function.polymorphic_function.Function at 0x15f7936b0>"
+      ]
+     },
+     "execution_count": 96,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf_cube = tf.function(cube)\n",
+    "tf_cube"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "5fe32fcc-bc17-4020-a0d3-3032a2da9bd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=int32, numpy=8>"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# now we have the same results but as tensors\n",
+    "tf_cube(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "9d176923-5aa8-4821-8e38-bdf0157e2047",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(), dtype=float32, numpy=8.0>"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf_cube(tf.constant(2.0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "c553ee2f-6a8c-48f5-8943-4f94dd0fcd3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is more common:\n",
+    "@tf.function\n",
+    "def tf_cube(x):\n",
+    "    return x ** 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "d5709672-71fd-437f-b7cd-1b8eb35ec4ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf_cube.python_function(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c4e9983d-4aab-40ec-9ad7-8112b03d9f8d",
+   "metadata": {},
+   "source": [
+    "When you want to improve the performance of a python function just turn it into a tensor!\n",
+    "\n",
+    "`jit_compile=True` when calling `tf.function()` will use accelerated linear algebra (XLA) can fuse mutiple operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c5871e9-9b69-44fb-b202-d2be70a811fd",
+   "metadata": {},
+   "source": [
+    "any custom function for a keras model is a TF function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9cc9dab-bd59-4b88-85c7-fc51b879d6ea",
+   "metadata": {},
+   "source": [
+    "If you call a TF function many times with different Python values, then many graphs will be generated, slowing down your program and using up a lot of RAM (you must delete the TF\n",
+    "function to release it)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d77dbca6-0952-4682-9bf5-4f5c82ae4775",
+   "metadata": {},
+   "source": [
+    "TensorFlow graphs are an optimized computational representation of your Python functions\n",
+    "`tf.autograph.to_code(sum_squares.python_function)` helps debug auto graphs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eababa27-f677-4d0b-9119-518c00c1f0dc",
+   "metadata": {},
+   "source": [
+    "in order to get proper side effects in tf functions use: `tf.print()`\n",
+    "\n",
+    "Always prefer vectorized implementation whenever you can, rather than loops"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "562d20da-ebbd-4504-951b-f3f9d540bd5c",
+   "id": "f5c00f4f-104e-44d4-a260-bc0dcc723a15",
    "metadata": {},
    "outputs": [],
    "source": []
