1D convolutional layers, LSTM and GRU memory cells

--- a/skt-RNN.ipynb
+++ b/skt-RNN.ipynb
@@ -2264,9 +2264,447 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1386a64d-90ec-4a8b-a567-e8e54cb286e6",
+   "metadata": {},
+   "source": [
+    "Instead of one day ahead lets forecast 2 weeks ahead:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "id": "4464bb63-4b57-4587-9f1e-2e9a7e840673",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 56ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 52ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 45ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 49ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 49ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 49ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 51ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 51ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 51ms/step\n",
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 50ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = rail_valid.to_numpy()[np.newaxis, :seq_length, np.newaxis]\n",
+    "for step_ahead in range(14):\n",
+    "    y_pred_one = model.predict(X)\n",
+    "    X = np.concatenate([X, y_pred_one.reshape(1, 1, 1)], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d2f3575-3815-4b93-a024-9091445e3d50",
+   "metadata": {},
+   "source": [
+    "train an RNN to predict the next 14 values in one shot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "2962a971-151b-4f45-b798-6fb2c4c72403",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def split_inputs_and_targets(mulvar_series, ahead=14, target_col=1):\n",
+    "    return mulvar_series[:, :-ahead], mulvar_series[:, -ahead:, target_col]\n",
+    "\n",
+    "ahead_train_ds = tf.keras.utils.timeseries_dataset_from_array(\n",
+    "    mulvar_train.to_numpy(),\n",
+    "    targets=None,\n",
+    "    sequence_length=seq_length + 14,\n",
+    "    batch_size=32,\n",
+    "    shuffle=True,\n",
+    "    seed=42\n",
+    ").map(split_inputs_and_targets)\n",
+    "\n",
+    "ahead_valid_ds = tf.keras.utils.timeseries_dataset_from_array(\n",
+    "    mulvar_valid.to_numpy(),\n",
+    "    targets=None,\n",
+    "    sequence_length=seq_length + 14,\n",
+    "    batch_size=32\n",
+    ").map(split_inputs_and_targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "c7381be9-08b0-4b22-a1c2-f89ecf6e0673",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ahead_model = tf.keras.Sequential([\n",
+    "    tf.keras.Input(shape=[None, 5]),\n",
+    "    tf.keras.layers.SimpleRNN(32),\n",
+    "    tf.keras.layers.Dense(14)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "f6b45328-5d08-4366-927b-66a675cab391",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 57ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = mulvar_valid.to_numpy()[np.newaxis, :seq_length]\n",
+    "Y_pred = ahead_model.predict(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3695ab56-4b2a-4823-bfc8-eeb541218383",
+   "metadata": {},
+   "source": [
+    "### Forcasting using a Sequence-to-Sequence Model\n",
+    "\n",
+    "we should train the next 14 values at each step, instead of just the last step\n",
+    "\n",
+    "instead of a sequence-to-vector RNN we need to turn it into a sequence-to-sequence RNN\n",
+    "\n",
+    "at time step 0 the model will output a vector containing the forecasts for time steps 1 to 14, then at time step 1 the model will forecast time steps 2 to 15, and so on. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "860b606e-d7d4-4f67-b514-3931493b6b2e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<tf.Tensor: shape=(4, 3), dtype=int64, numpy=\n",
+       " array([[0, 1, 2],\n",
+       "        [1, 2, 3],\n",
+       "        [2, 3, 4],\n",
+       "        [3, 4, 5]])>,\n",
+       " <tf.Tensor: shape=(4, 3), dtype=int64, numpy=\n",
+       " array([[1, 2, 3],\n",
+       "        [2, 3, 4],\n",
+       "        [3, 4, 5],\n",
+       "        [4, 5, 6]])>]"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4 consecutive windows, each of length 3\n",
+    "my_series = tf.data.Dataset.range(7)\n",
+    "dataset = to_windows(to_windows(my_series, 3), 4)\n",
+    "list(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "52d47157-48b6-4f7b-adef-b3a0e55bea76",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(<tf.Tensor: shape=(4,), dtype=int64, numpy=array([0, 1, 2, 3])>,\n",
+       "  <tf.Tensor: shape=(4, 2), dtype=int64, numpy=\n",
+       "  array([[1, 2],\n",
+       "         [2, 3],\n",
+       "         [3, 4],\n",
+       "         [4, 5]])>),\n",
+       " (<tf.Tensor: shape=(4,), dtype=int64, numpy=array([1, 2, 3, 4])>,\n",
+       "  <tf.Tensor: shape=(4, 2), dtype=int64, numpy=\n",
+       "  array([[2, 3],\n",
+       "         [3, 4],\n",
+       "         [4, 5],\n",
+       "         [5, 6]])>)]"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = dataset.map(lambda S: (S[:, 0], S[:, 1:]))\n",
+    "list(dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "f855b85b-1c39-49c8-8ae7-c57fb86fd345",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def to_seq2seq_dataset(\n",
+    "    series,\n",
+    "    seq_length=56,\n",
+    "    ahead=14,\n",
+    "    target_col=1,\n",
+    "    batch_size=32,\n",
+    "    shuffle=False,\n",
+    "    seed=None\n",
+    "):\n",
+    "    ds = to_windows(tf.data.Dataset.from_tensor_slices(series), ahead + 1)\n",
+    "    ds = to_windows(ds, seq_length).map(lambda S: (S[:, 0], S[:, 1:, 1]))\n",
+    "    if shuffle:\n",
+    "        ds = ds.shuffle(8 * batch_size, seed=seed)\n",
+    "    return ds.batch(batch_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "id": "d3c27663-cd11-43de-84b3-07d7b341f1ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mathias/.pyenv/versions/3.12.0/lib/python3.12/site-packages/tensorflow/python/data/ops/structured_function.py:258: UserWarning: Even though the `tf.config.experimental_run_functions_eagerly` option is set, this option does not apply to tf.data functions. To force eager execution of tf.data functions, please use `tf.data.experimental.enable_debug_mode()`.\n",
+      "  warnings.warn(\n",
+      "/Users/mathias/.pyenv/versions/3.12.0/lib/python3.12/site-packages/tensorflow/python/data/ops/structured_function.py:258: UserWarning: Even though the `tf.config.experimental_run_functions_eagerly` option is set, this option does not apply to tf.data functions. To force eager execution of tf.data functions, please use `tf.data.experimental.enable_debug_mode()`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "seq2seq_train = to_seq2seq_dataset(mulvar_train, shuffle=True, seed=42)\n",
+    "seq2seq_valid = to_seq2seq_dataset(mulvar_valid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "ca28f626-6206-4cce-9987-d8ac4b06b68d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "seq2seq_model = tf.keras.Sequential([\n",
+    "    tf.keras.Input(shape=[None, 5]),\n",
+    "    tf.keras.layers.SimpleRNN(32, return_sequences=True),\n",
+    "    tf.keras.layers.Dense(14)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "0412fcbc-f360-4cda-bd3d-8bd9652b90a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 129ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = mulvar_valid.to_numpy()[np.newaxis, :seq_length]\n",
+    "y_pred_14 = seq2seq_model.predict(X)[0, -1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9cdcd1f-9ad7-4734-a65f-ef20eb9dd874",
+   "metadata": {},
+   "source": [
+    "### RNNs aren't good on long sequences\n",
+    "\n",
+    "A way to fight unstable gradients is to have a memory cell (ouputs from previous time step) and apply layer normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 155,
+   "id": "ea06ba37-eda0-4a5a-ab89-dd0729ecb4e8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LNSimpleRNNCell(tf.keras.layers.Layer):\n",
+    "    def __init__(self, units, activation=\"tanh\", **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        self.state_size = units\n",
+    "        self.output_size = units\n",
+    "        self.simple_rnn_cell = tf.keras.layers.SimpleRNNCell(units, activation=None)\n",
+    "        self.layer_norm = tf.keras.layers.LayerNormalization()\n",
+    "        self.activation = tf.keras.activations.get(activation)\n",
+    "\n",
+    "    def call(self, inputs, state):\n",
+    "        outputs, new_states = self.simple_rnn_cell(inputs, states)\n",
+    "        norm_outputs = self.activation(self.layer_norm(outputs))\n",
+    "        return norm_outputs, [norm_outputs]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "48b98535-5da1-4d53-8f07-9e1a35566f7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mathias/.pyenv/versions/3.12.0/lib/python3.12/site-packages/keras/src/layers/layer.py:393: UserWarning: `build()` was called on layer 'ln_simple_rnn_cell', however the layer does not have a `build()` method implemented and it looks like it has unbuilt state. This will cause the layer to be marked as built, despite not being actually built, which may cause failures down the line. Make sure to implement a proper `build()` method.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "custom_ln_model = tf.keras.Sequential([\n",
+    "    tf.keras.Input(shape=[None, 5]),\n",
+    "    tf.keras.layers.RNN(LNSimpleRNNCell(32), return_sequences=True),\n",
+    "    tf.keras.layers.Dense(14)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c11abf7-ad38-4200-8fb4-ef6fd7649cc4",
+   "metadata": {},
+   "source": [
+    "most recurrent layers and cells provided by Keras have \n",
+    "- **dropout:** dropout rate to apply to the inputs\n",
+    "- **recurrent_dropout:** dropout rate for the hidden states, between time steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55c68820-634b-44fc-be90-a8f30223d7a3",
+   "metadata": {},
+   "source": [
+    "### LSTM (long sort-term memory)\n",
+    "\n",
+    "after a while the information that flows through RNN eventually it will have no trace of the first inputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 157,
+   "id": "6e59b0c9-fb37-46a2-bccc-9da6487749bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = tf.keras.Sequential([\n",
+    "    tf.keras.Input(shape=[None, 5]),\n",
+    "    tf.keras.layers.LSTM(32, return_sequences=True),\n",
+    "    tf.keras.layers.Dense(14)\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b78fc18-8ac6-4335-9eec-eec2acb4d5db",
+   "metadata": {},
+   "source": [
+    "LSTM and GRU cells are one of the main reasons behind the success of RNNs, GRU performs just as well as LSTM but their architecture is much simplier"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64ebbe7e-fe65-47a7-9464-154bc376ea34",
+   "metadata": {},
+   "source": [
+    "### 1D convolutional layers\n",
+    "\n",
+    "used to process long sequences like audio files, we can use the same example as earlier:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "1846a209-866a-4a0b-b523-0b51e0b51cde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mathias/.pyenv/versions/3.12.0/lib/python3.12/site-packages/tensorflow/python/data/ops/structured_function.py:258: UserWarning: Even though the `tf.config.experimental_run_functions_eagerly` option is set, this option does not apply to tf.data functions. To force eager execution of tf.data functions, please use `tf.data.experimental.enable_debug_mode()`.\n",
+      "  warnings.warn(\n",
+      "/Users/mathias/.pyenv/versions/3.12.0/lib/python3.12/site-packages/tensorflow/python/data/ops/structured_function.py:258: UserWarning: Even though the `tf.config.experimental_run_functions_eagerly` option is set, this option does not apply to tf.data functions. To force eager execution of tf.data functions, please use `tf.data.experimental.enable_debug_mode()`.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "conv_rnn_model = tf.keras.Sequential([\n",
+    "    tf.keras.Input(shape=[None, 5]),\n",
+    "    tf.keras.layers.Conv1D(filters=32, kernel_size=4, strides=2, activation=\"relu\"),\n",
+    "    tf.keras.layers.GRU(32, return_sequences=True),\n",
+    "    tf.keras.layers.Dense(14)\n",
+    "])\n",
+    "\n",
+    "longer_train = to_seq2seq_dataset(mulvar_train, seq_length=112, shuffle=True, seed=42)\n",
+    "longer_valid = to_seq2seq_dataset(mulvar_valid, seq_length=112)\n",
+    "downsampled_train = longer_train.map(lambda X, Y: (X, Y[:, 3::2]))\n",
+    "downsampled_valid = longer_valid.map(lambda X, Y: (X, Y[:, 3::2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56ad1980-67aa-48f4-818e-6ed2836b5ac9",
+   "metadata": {},
+   "source": [
+    "### A Wavenet model:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "200edbf0-024f-4193-adfd-4a8ce1bac39d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wavenet_model = tf.keras.Sequential()\n",
+    "wavenet_model.add(tf.keras.layers.Input(shape=[None, 5]))\n",
+    "for rate in (1, 2, 4, 8) * 2:\n",
+    "    wavenet_model.add(tf.keras.layers.Conv1D(\n",
+    "        filters=32, kernel_size=2, padding=\"causal\", activation=\"relu\", dilation_rate=rate\n",
+    "    ))\n",
+    "wavenet_model.add(tf.keras.layers.Conv1D(filters=14, kernel_size=1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f6615e2-a584-4fcf-bbc7-adda08739f1f",
+   "metadata": {},
+   "source": [
+    "\"causal\" padding, which is like \"same\" padding except that the zeros are appended only at the start of the input sequence, instead of on both sides."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2f2ca8a8-073e-4159-bb98-583da9bb9b3e",
+   "id": "4ade9ce2-8284-46fb-819d-3e16af35f638",
    "metadata": {},
    "outputs": [],
    "source": []
